# Augmentales_image_processing_module

./: CMakeLists.txt  README.md  inference.cpp
data/: coco.names
